updated the custom scrollbar library cleaned up the height of the scrollbar fixed issues with filtering anabolic/catabolic pathways

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -140,9 +140,9 @@ p, h1, h2, h3, h4, h5, h6 {
     }
 
     .mCSB_scrollTools {
-        width: 4px !important;
-        height: 95% !important;
-        margin-top: 5%;
+        width: 4px;
+        height: 98%;
+        top: 1%;
     }
 }
 
