--- a/sass/pathways.scss
+++ b/sass/pathways.scss
@@ -38,12 +38,11 @@
                 font-weight: bold;
             }
 
-            .catabolic {
+            .catabolic, .anabolic, .points {
                 display: inline;
             }
             
             .points {
-                display: inline;
                 float: right;
             }
 
